# sleepy-screen

./: .gitignore  LICENSE  README.md  configure.ac  configure.scan
src/: Makefile.am  main.c  sleepy-dbus.c  sleepy-dbus.h  sleepy-xevents.c  sleepy-xevents.h  sleepy_xevents.c  sleepy_xevents.h
